fix overflow issues

--- a/src/app/features/sidebar/sidebar.component.scss
+++ b/src/app/features/sidebar/sidebar.component.scss
@@ -3,6 +3,8 @@
 :host {
   display: flex;
   flex: 1;
+  min-height: 0px;
+  min-width: 0px;
   background-color: var(--bg-darkest);
 
   &.mac {
@@ -29,6 +31,8 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    min-height: 0px;
+    min-width: 0px;
     background-color: var(--bg-darkest);
   }
 }
