--- a/src/app/features/stream/components/stream-detail/stream-detail.component.scss
+++ b/src/app/features/stream/components/stream-detail/stream-detail.component.scss
@@ -3,11 +3,15 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
+  min-height: 0px;
+  min-width: 0px;
 
   .stream-detail--form-group {
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
+    min-height: 0px;
+    min-width: 0px;
 
     .stream-detail--form-header {
       margin-bottom: 10px;
@@ -29,10 +33,14 @@
       display: flex;
       flex-direction: column;
       flex: 1 1 auto;
+      min-height: 0px;
+      min-width: 0px;
 
       .kido-json-viewer--root-node {
         margin-top: 5px;
         flex: 1 1 auto;
+        min-height: 0px;
+        min-width: 0px;
       }
     }
   }
