--- a/src/app/pages/stream/stream.component.scss
+++ b/src/app/pages/stream/stream.component.scss
@@ -2,4 +2,6 @@
   display: flex;
   flex-direction: column;
   flex: 1 1 auto;
+  min-height: 0px;
+  min-width: 0px;
 }
